Update contact email in index.html

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <h2>Contato</h2>
   <p>
     Em caso de dúvidas, entre em contato pelo e-mail:
-    <strong>SEU_EMAIL_AQUI</strong>
+    <strong>gilesonalves@gmail.com</strong>
   </p>
 
   <p>
