Update support email address for account deletion

--- a/delete-account.html
+++ b/delete-account.html
@@ -36,7 +36,7 @@
     </p>
 
     <p>
-      <strong>📧 suporte.orcamentofamiliar@gmail.com</strong>
+      <strong>📧 gilesonalves@gmail.com</strong>
     </p>
 
     <p>
